k8s/mlflow.yaml
# MLflow tracking server + registry, backed by the
# RDS Postgres instance (backend store) and S3 bucket (artifact store)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: creditcard-fraud-mlops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: ghcr.io/mlflow/mlflow:v3.16.0
          command: ["mlflow", "server"]
          args:
            - "--backend-store-uri=postgresql://mlflow:$(DB_PASSWORD)@creditcard-fraud-mlops-mlflow.cloa6kucwdon.eu-west-2.rds.amazonaws.com:5432/mlflow"
            - "--default-artifact-root=s3://creditcard-fraud-mlops-mlflow-artifacts-905418469584/"
            - "--host=0.0.0.0"
            - "--port=5000"
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: creditcard-fraud-mlops
spec:
  selector:
    app: mlflow
  ports:
    - port: 5000
      targetPort: 5000
