k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-model-serving
  namespace: creditcard-fraud-mlops
  labels:
    app: fraud-model-serving
spec:
  selector:
    app: fraud-model-serving
  ports:
    - name: http
      port: 8080
      targetPort: 8080
